--- a/src/components/WhatsAppButton.astro
+++ b/src/components/WhatsAppButton.astro
@@ -1,6 +1,6 @@
 ---
-const whatsappNumber = "595982473466"; 
-const customMessage = "Hola, quiero más información sobre el colegio."; 
+const whatsappNumber = "595982473466"; // Número completo con código de país
+const customMessage = "Hola, quiero más información sobre el colegio."; // Mensaje personalizado
 ---
 
 <a
