--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -4,7 +4,7 @@ import ContactCard from '../components/ContactCard';
 import MapSection from '../components/MapSection';
 import Boton from '../components/WhatsAppButton.astro';
 import Header from "../components/Header"
-import Footer from '../components/footer'
+import Footer from '../components/Footer.jsx'
 ---
 
 <Layout title="Contacto | Escuela Básica N° 271">
