--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.jsx';
 import AboutUs from '../components/AboutUs.astro';
 import Academico from '../components/Academico'; 
-import Footer from '../components/footer'; 
+import Footer from '../components/Footer.jsx'; 
 import Boton from '../components/WhatsAppButton.astro';
 ---
 
