Actualizacion 5 con lo datos del colegio actualizados

--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -21,14 +21,16 @@
             <div class="flex flex-col md:flex-row h-full">
               <div class="md:w-1/2 relative">
                 <img src="/fondo1.jpeg" alt="Misión" class="w-full h-full object-cover">
-                <div class="absolute inset-0 bg-gradient-to-r from-blue-600/50 to-blue-600/30"></div>
+                <div class="absolute inset-0 bg-gradient-to-r from-blue-400/50 to-blue-600/30"></div>
                 <h3 class="absolute top-6 left-6 text-3xl font-bold text-white">Misión</h3>
               </div>
               <div class="md:w-1/2 p-8 flex items-center">
                 <p class="text-lg text-gray-700 leading-relaxed">
-                  En Escuela Básica N° 271 Don Carlos Antonio López, nos dedicamos a proporcionar una educación integral 
-                  que fomente el pensamiento crítico y la creatividad. Nuestro objetivo es preparar a los estudiantes 
-                  para enfrentar los desafíos del futuro con confianza y responsabilidad.
+                  La Escuela básica nro 271 don carlos Antonio lopez propne
+                  garantizar formación global en los procesos de eneñanza y
+                  aprendizaje atraves de estrategias reformistas con participación
+                  activa de la comunidad educativa para formar jóvenes idóneos
+                  que confronten los desafíos de la vida
                 </p>
               </div>
             </div>
@@ -43,9 +45,10 @@
               </div>
               <div class="md:w-1/2 p-8 flex items-center">
                 <p class="text-lg text-gray-700 leading-relaxed">
-                  Aspiramos a ser reconocidos como una institución educativa líder, formando estudiantes íntegros, 
-                  comprometidos con su comunidad y preparados para contribuir positivamente a la sociedad a través 
-                  de la innovación y la excelencia académica.
+                  Que la institución fomente de forma efectiva mediante proyectos
+                  educativos innovadores la formación integral de los educandos
+                  con miras a las exigencias del entorno y del mundo actual
+
                 </p>
               </div>
             </div>
