Actualizacion 6, lista para mandar

--- a/src/components/WhatsAppButton.astro
+++ b/src/components/WhatsAppButton.astro
@@ -1,5 +1,5 @@
 ---
-const whatsappNumber = "595982473466"; // Número completo con código de país
+const whatsappNumber = "595985117223"; // Número completo con código de país 0985117223
 const customMessage = "Hola, quiero más información sobre el colegio."; // Mensaje personalizado
 ---
 
